# zion_old

./: .gitignore
test_client/: CMakeLists.txt  common.h  test_main.cpp
test_client/_3rdparty_/rapidjson/include/rapidjson/: cursorstreamwrapper.h  document.h  encodedstream.h  filereadstream.h  fwd.h  istreamwrapper.h  ostreamwrapper.h  reader.h
zion_core/: CMakeLists.txt  ini.json  main.cpp
zion_core/_3rdparty_/darknet/: darknet  uselib  yolo_v2_class.hpp
zion_core/_3rdparty_/darknet/lib/LINUX/: darknet
zion_core/_3rdparty_/ffmpeg-4.2.1/include/libavcodec/: avcodec.h
zion_core/_3rdparty_/gsl/lib/LINUX/: libgslcblas.so.0
zion_core/_3rdparty_/rapidjson/include/rapidjson/: allocators.h  encodings.h  filewritestream.h  memorybuffer.h  memorystream.h  (+4 more)
zion_core/client/: CMakeLists.txt  client_manager.cpp  client_manager.h  client_message.cpp  client_message.h  client_task.cpp  client_task.h  ic_client.cpp  ic_client.h  main.cpp
zion_core/common/: CMDefine.hpp  CMdLogger.cpp  CMdLogger.hpp  Configurator.cpp  Configurator.hpp  MessageQueue.h  db_manager.cpp  db_manager.h  ic_define.h  ic_server.cpp  ic_server.h  ic_util.cpp  ic_util.h  ic_util.hpp  ics_define.h  ics_util.cpp  ics_util.hpp  logger.cpp  logger.h  logger.hpp  message_parser.cpp  message_parser.h  message_queue.h  message_responder.cpp  message_responder.h  server.cpp  server.h
zion_core/common/include/: db_manager.h  db_sink.h  error_define.h  error_manager.h  event_manager.h  ic_convertor.h  ic_define.h  ic_manager.h  ic_manager.tpp  ic_util.h  logger.h  message_queue.h  message_responder.h  message_responder.tpp  message_sender.h  query_maker.h  socket_abstraction.h  socket_message.h  socket_message.tpp  task_manager.h  tcp_sink.h
zion_core/common/src/: db_manager.cpp  error_define.cpp  error_manager.cpp  event_manager.cpp  ic_util.cpp  logger.cpp  message_sender.cpp  query_maker.cpp  socket_abstraction.cpp  socket_message.cpp  task_manager.cpp
zion_core/daemon/: DMServer.cpp  DMServer.h  DaemonDefine.h  DaemonMgr.cpp  DaemonMgr.h  DaemonParser.cpp  DaemonParser.h  ErrorList.cpp  ErrorList.h  define.h  ics_define.h
zion_core/db/: db.config  db_config.json  livsmed.db  livsmed_log.db
zion_core/endecode/include/: ArTransServer.h  ColorConvAPI.h  ConverterAPI.h  DecoderAPI.h  DeepRTAPI.h  DepacketAPI.h  DeviceOutAPI.h  ESMBase.h  ESMLocks.h  EncoderAPI.h  FdrEmulatorAPI.h  FdrPlayer.h  FrCvClrConv.h  FrUtil.h  LogIface.h  MgDevHelper.h  MgVideoSrcAPI.h  MppcPointData.h  PacketAPI.h  RtpAPI.h  RtspAPI.h  SdpAPI.h  SeiGenAPI.h  SocketAPI.h  StreamRTPSender.h  StreamReaderAPI.h  StreamUtil.h  StreamUtilAPI.h  StreamWriterAPI.h  SystemAPI.h  TraceAPI.h  TransCoderAPI.h  UtilAPI.h  mediaerror.h  mediafourcc.h  mediainfo.h
zion_core/include/: db_manager.h  db_sink.h  ic_define.h  ic_manager.h  ic_util.h  logger.h  message_manager.h  query_maker.h  task_manager.h
zion_core/manager/: FrTrans.cpp  FrTrans.h  MessageManager.cpp  MessageManager.hpp  TaskManager.cpp  TaskManager.hpp  error_manager.cpp  error_manager.h  ic_manager.cpp  ic_manager.h  message_manager.cpp  message_manager.h  message_manager.hpp  server_manager.cpp  server_manager.h  task_manager.cpp  task_manager.h  task_manager.hpp
zion_core/py/: color_test.py  dove.py  filter.py  mser.py  video_mover.py  visualize_traj.py
zion_core/server/: CMakeLists.txt  ic_manager.cpp  ic_manager.h  ic_server.cpp  ic_server.h  main.cpp  message_manager.h  message_responder.cpp  server_manager.cpp  server_manager.h  server_message.cpp  server_message.h  server_task.cpp  server_task.h  sever_manager.cpp  sever_manager.h  sever_message.cpp  sever_message.h  svr_manager.cpp  svr_manager.h  svr_message.cpp  svr_message.h  task_manager.cpp  task_manager.h
zion_core/src/: db_manager.cpp  ic_manager.cpp  ic_server.cpp  ic_util.cpp  logger.cpp  message_manager.cpp  message_responder.cpp  query_maker.cpp  task_manager.cpp
zion_core/stabil/: Algebra.cpp  Algebra.hpp  ColorTracking.cpp  ColorTracking.hpp  DefData.hpp  Detection.cpp  Detection.hpp  ExpUtil.cpp  ExpUtil.hpp  GrayTracking.cpp  GrayTracking.hpp  Stabilization.cpp  Stabilization.hpp  Tracking.cpp  Tracking.hpp
zion_core/watchdog/: Zion_Watchdog.cpp  Zion_Watchdog.vcxproj  Zion_Watchdog.vcxproj.filters
(+53 files in other folders)
